courseService is included in audit cycle